--- a/bootstrap.css
+++ b/bootstrap.css
@@ -171,7 +171,7 @@ sup {
 }
 
 a {
-    color: #D9230F;
+    color: #000000;
     text-decoration: none;
     background-color: transparent;
     -webkit-text-decoration-skip: objects;
